--- a/doc/hets.bib
+++ b/doc/hets.bib
@@ -1,9 +1,9 @@
 @unpublished{HasCASL/Summary,
   author = {L. Schr\"oder and T. Mossakowski and C. Maeder},
   title = {{\HasCASL} -- {I}ntegrated functional specification and programming. {L}anguage Summary},
-  note = {Available at \verb?http://www.informatik.uni-bremen.de/agbkb/forschung/formal_methods/? \verb?CoFI/HasCASL?}},
+  note = {Available at \url{http://www.informatik.uni-bremen.de/agbkb/forschung/formal_methods/CoFI/HasCASL}},
   year = {2003},
-
+}
 @Article{Schroder05b,
   author = {Lutz Schr{\"o}der},
   title = {The {HasCASL} Prologue - Categorical Syntax and Semantics of the Partial {$\lambda$}-calculus},
