--- a/doc/kl.bib
+++ b/doc/kl.bib
@@ -2,20 +2,20 @@
 @unpublished{url:Emacs,
   Author =	 {{F}ree {S}oftware {F}oundation},
   Title =	 {Emacs},
-  Note =	 {Available at \texttt{http://www.gnu.org/software/emacs/emacs.html}, },
+  Note =	 {Available at \url{http://www.gnu.org/software/emacs/emacs.html}, },
 }
 
 @Unpublished{url:XEmacs,
   author = 	 {\texttt{http://www.xemacs.org/People/index.html}},
   title = 	 {{XE}macs},
-  note = 	 {Available at \texttt{http://www.xemacs.org/}}
+  note = 	 {Available at \url{http://www.xemacs.org/}}
 }
 
 @Unpublished{url:ProofGeneral,
   author = 	 {D. Aspinal and S. Berghofer and P. Callaghan and 
                   P. Courtieu and C. Rafalli and M. Wenzel},
   title = 	 {{E}macs {P}roof {G}eneral},
-  note = 	 {Available at \texttt{http://proofgeneral.inf.ed.ac.uk/}}
+  note = 	 {Available at \url{http://proofgeneral.inf.ed.ac.uk/}}
 }
 
 
@@ -112,7 +112,7 @@
   year = {2005},
   editor = {Jos{\'e} Fiadeiro},
   booktitle = {Recent Trends in Algebraic Development Techniques, 17th International Workshop (WADT 2004)},
-  publisher = {Springer; Berlin; http://www.springer.de},
+  publisher = {Springer; Berlin; \url{http://www.springer.de}},
   series = {Lecture Notes in Computer Science},
   volume = {3423},
   pages = {106-125},
@@ -383,3 +383,28 @@ The Revised Report},
   publisher =    "TWLT series, University of Twente",
   note =         "Long version to appear in Theoretical Computer Science",
 }
+
+@article{Sutcliffe:2006:CASC,
+	Author = {Geoff Sutcliffe and Christian B. Suttner},
+	Date-Added = {2007-03-29 17:19:45 +0200},
+	Date-Modified = {2007-03-29 17:21:18 +0200},
+	Journal = {AI Communications},
+	Number = {1},
+	Pages = {35--48},
+	Title = {The State of {CASC}},
+	Volume = {19},
+	Year = {2006}}
+
+@article{SutcliffeEA:2001:EvalATP,
+	Author = {Geoff Sutcliffe and Christian B. Suttner},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2007-03-29 12:00:20 +0200},
+	Date-Modified = {2007-03-29 17:21:06 +0200},
+	Ee = {http://dx.doi.org/10.1016/S0004-3702(01)00113-8},
+	Journal = {Artificial Intelligence},
+	Number = {1-2},
+	Pages = {39--54},
+	Title = {Evaluating general purpose automated theorem proving systems},
+	Volume = {131},
+	Year = {2001}}
+
