new entries for TPHOL paper git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8399 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/case.bib
+++ b/doc/case.bib
@@ -52,11 +52,16 @@ Artificial Intelligence and Simulation of Behaviour")
 @comment{Marker for AAAaaa}
 
 
-
+@techreport(Jones93,
+   author = "Jones, M. P.",
+   title = "Partial evaluation for dictionary-free overloading",
+   institution = "Yale University",
+   year = 1993
+)
 
 @techreport(KiebPl,
    author = "Kieburtz, R.",
-   title = "P-logic: property verification for Haskell programs",
+   title = "P-logic: property verification for {H}askell programs",
    institution = "OGI",
    year = 2002
 )
@@ -83,6 +88,14 @@ Artificial Intelligence and Simulation of Behaviour")
       volume = {111}
 }
 
+@inproceedings(moggi89,
+   author = "Moggi, E.",
+   title = "Computational lambda-calculus and monads",
+   booktitle = "Fourth Annual Symposium on Logic in Computer Science",
+   publisher = "IEEE Computer Society Press",
+   pages = "14--23",
+   year = 1989
+)
 
 @inproceedings(barber,
    author = "Barber, A. and Gardner, P. and Hasegawa, M. and Plotkin, G.",
@@ -92,6 +105,26 @@ Artificial Intelligence and Simulation of Behaviour")
    pages = "78--97",
    year = 1997
 )
+
+@InProceedings(phh99,
+  author =	 "John Peterson and Greg Hager and Paul Hudak",
+  title =	 "A Language for Declarative Robotic Programming",
+  booktitle =	 "International Conference on Robotics and Automation",
+  year =	 1999
+)
+
+@InProceedings{Hudak2003,
+  author =       "Paul Hudak and Antony Courtney and Henrik Nilsson
+                  and John Peterson",
+  title =        "Arrows, Robots, and Functional Reactive Programming",
+  booktitle =    "Summer School on Advanced Functional Programming 2002, 
+                  Oxford University",
+  year =         2003,
+  volume =       2638,
+  series =       "Lecture Notes in Computer Science",
+  pages =        "159--187",
+  publisher =    "Springer-Verlag"
+}
 
 @inproceedings(fleuriot,
    author = "Fleuriot, J. D.",
@@ -265,7 +298,7 @@ proof-planning paradigm},
   year = "2003" }
 
 
-@InProceedings(phh99,
+@InProceedings(phh99a,
   author =	 "Peterson, J. and Hager, G. D. and Hudak, P.",
   title =	 "A Language for Declarative Robotic Programming",
   booktitle =	 "International Conference on Robotics and Automation",
@@ -648,6 +681,14 @@ binary computers},
    year = "2006"
 )
 
+@techreport(AWE2,
+   author = "Bortin, M. and Johnsen, E. B. and Lueth, C.",
+   title = "The {A}{W}{E} extension package",
+   institution = "Universitaet Bremen",
+   year = "2007"
+)
+
+
 @book{Hudak,
    author = {Hudak, P.},
    title = {The Haskell School of Expression},
@@ -655,7 +696,32 @@ binary computers},
    year = {2000}
 }
 
-@Manual{Hets, 
+@Misc{Walter05,
+  author = {Dennis Walter},
+  title = {Monadic Dynamic Logic: Application and Implementation},
+  year = {2005},
+  keywords = {monad dynamic logic HasCASL},
+  pdfurl = {http://www.cs.chalmers.se/~denniswa/dipl-online.pdf},
+}
+
+@InProceedings{Hets,
+  author = {Till Mossakowski and Christian Maeder and Klaus L{\"u}ttich},
+  title = {The {H}eterogeneous {T}ool {S}et},
+  year = {2007},
+  editor = {Orna Grumberg and Michael Huth},
+  booktitle = {TACAS 2007},
+  publisher = {Springer-Verlag Heidelberg},
+  series = {Lecture Notes in Computer Science},
+  volume = {4424},
+  pages = {519-522},
+  keywords = {proof heterogeneity logic institution prover theorem
+integration development graph},
+  pdfurl = {http://www.tzi.de/~till/papers/hets-tacas-toolpaper.pdf},
+  psurl = {http://www.tzi.de/~till/papers/hets-tacas-toolpaper.ps},
+}
+
+
+@Manual{HetsOld, 
    author = {Mossakowski, T. and Maeder, C. and Luettich,
 K. and Woelfl, S.}, 
    title = {The {H}eterogeneous {T}ool {S}et}, 
@@ -730,6 +796,14 @@ publisher = "MIT Press", year = "1993"
   volume =       {3}, 
   publisher =    {BCS}
 }
+
+@techreport{Tlmm,
+  author = {Torrini, P. and Lueth, C. and Maeder, C. and Mossakowski, T.},
+  title = 	 {Translating {H}askell to {I}sabelle},
+  year =	 {2007},
+  institution =  {Universitaet Bremen}
+}
+
 
 @Article{Thompson89,
   author = 	 {Thompson, S.},
