--- a/OWL_DL/doc/owl-casl-doc_en.tex
+++ b/OWL_DL/doc/owl-casl-doc_en.tex
@@ -51,7 +51,7 @@ parsing and first analysis are done in JAVA
 In it nothing will be changed, the implementation however some new classes produced, by which the old classes are replaced:
    \begin{itemize}
       \item OWL2ATermLoader instead PelletLoader;
-   	  \item OWL2ATermVisitor instead PelletVisitor;
+          \item OWL2ATermVisitor instead PelletVisitor;
       \item RenderingVisitor2 instead RenderingVisitor
    \end{itemize}
 
@@ -65,24 +65,24 @@ All class-, property and individual data structures are developed in \textbf{\em
 RenderingVisitor2 is here an assistance class of the expenditures to design only the simple ClassID and Restrictions in addition class-, property- and individual- axioms.  Because restriction and axiom need only ID (not concrete data structure) as parameters, those are converted to need URI to it.  The different axioms are dependent on the KnowledgeBasis, which in this class however not at all produced or changed, but already one specifies in OWL2ATerm.\\
 
 \textbf{\emph{OWL2ATerm}} is the main class, in which the OWLParser is called.  All output messages of the Parser are collected by a assistance class \textbf{\emph{OWLATReporter}} and stored into a MessageList.  The messages are divided in 3 parts:
-	\begin{itemize}
-		\item Level: OWL-\{Lite, DL, Full\}.
-		\item Type of Message.
-		\item content of message.
-	\end{itemize} 
+        \begin{itemize}
+                \item Level: OWL-\{Lite, DL, Full\}.
+                \item Type of Message.
+                \item content of message.
+        \end{itemize} 
 Afterwards Parser errors and warnings behind the messages are inserted also in the message list. \\
 The method "'owlParserOutput"' builds all necessary information up from the Parser, and spends at the end an entire ATerm formula (OWLParserOutput(validation, messages, name spaces, ontology)):
-	\begin{itemize}
-		\item validation: OWL-\{Lite, DL, Full\}.
-		\item messages: all messages from OWL parser incl. parser errors and warnings.
-		\item namespaces: here namespaces are stored also as some of the output. Thus all URI can be developed late in Haskell with suitable namespaces.
-		\item ontology: main part of the result ATerm, therein all classes, properties, individuals and axioms are outputs.
-	\end{itemize} 
+        \begin{itemize}
+                \item validation: OWL-\{Lite, DL, Full\}.
+                \item messages: all messages from OWL parser incl. parser errors and warnings.
+                \item namespaces: here namespaces are stored also as some of the output. Thus all URI can be developed late in Haskell with suitable namespaces.
+                \item ontology: main part of the result ATerm, therein all classes, properties, individuals and axioms are outputs.
+        \end{itemize} 
    With the above implementation all output ATerm is developed so near by the abstract syntax by OWL\_DL, which is builded in Haskell, that later very simply to the Haskell abstract syntax converts becomes (see AS.hs and ATerm module of HETS)\\
 
    the JAVA output is an unshared ATerm-file.\\
 
-   @Klaus: try to contact the person maintaining the JAVA-ATerm
+   @Dominik: try to contact the person maintaining the JAVA-ATerm
    library and try to get a fix for the textual shared format writing
    bug. 
 
@@ -94,7 +94,7 @@ The ATerm represents the abstract syntax after reading all
 
 \subsection{Circular imports} 
 
-   @Heng: Circular imports need to be detected and yield a
+   Circular imports need to be detected and yield a
    warning.\\
    
 The integrated abstract syntax will be devided into different
@@ -132,22 +132,22 @@ The integrated abstract syntax will be devided into different
 
 (all numbers refer to the overview in the previous section)
 
-
-- splitting of (1) is done best during the conversion of the ATerm
+\begin{itemize}
+\item 
+  splitting of (1) is done best during the conversion of the ATerm
   into the abstract syntax. For the *ID types in OWL\_DL.AS the best
   data type is QName from Text.XML.HXT.DOM.XmlTreeTypes where also
   some useful functions on QName are defined.
-
-- Disambiguation of (1) must be done in a second step, which must
+  
+\item Disambiguation of (1) must be done in a second step, which must
   traverse the whole AS-tree. The traversal function (in its own
   class) needs a map as parameter which stores the mapping between
   original and disambiguated name. A disambiguated name can be formed
   either by adding a unique number as suffix or by adding the
   namePrefix string followed by an underscore as prefix.  In this step
-  all QName entries can be updated with the namespaceURI part.
-  The map will be saved later in a datastructure that is global to the
+  all QName entries can be updated with the namespaceURI part.  The
+  map will be saved later in a datastructure that is global to the
   development graph.
 
-- @Klaus: to be continued. 
-
+\end{itemize}
 \end{document}
